--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
 		}
 	],
 	"start_url": ".",
-	"display": "standalone",
-	"theme_color": "#000000",
+	"display": "fullscreen",
+	"theme_color": "#ffffff",
 	"background_color": "#ffffff"
 }
